# coderlm

./: .gitignore  .mise.toml  LICENSE  README.md  SKILL.md  justfile  package.json  pyproject.toml
.claude/: CLAUDE.md  PROBLEMS.md  settings.json
.github/workflows/: test.yml
.zed/: settings.json
docs/: alexzhang.py  dspy.impl.py
src/: __init__.py  bashrlm.md  bashrlm.sh  coderlm  coding-agent-rlm  integration.test.ts  unit.test.ts
