[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coding-agent-rlm"
version = "0.1.0"
description = "Process large codebases using the RLM (Recursive Language Model) pattern"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

[project.scripts]
coding-agent-rlm = "src:main"

[tool.hatch.build.targets.wheel]
packages = ["coding_agent_rlm"]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
