[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coderlm"
version = "0.1.1"
description = "Process large codebases using the RLM (Recursive Language Model) pattern"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

[project.scripts]
coderlm = "src:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
