[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coderlm"
version = "0.2.1"
description = "Make codex, gemini-cli, or any other coding agent into an RLM."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

[project.scripts]
coderlm = "src:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
